# learning

./: readme.md
HLD/redis/: lua-script-and-redis-sorted-set.md
HLD/terms/: edge-server.md  handling-temp-and-permanent-failure-in-distributed-db-using-hinted-handoff-and-merkel-tree.md
HLD/url-shortner/: system.md
LLD/: observer_example
LLD/adptor/: adaptor  adaptor.cpp  adaptor.ts  adaptorV2.cpp  adaptorV2.ts
LLD/command_design_pattern/: command_design_pattern  command_design_pattern.cpp
LLD/decorator/: decorator  decorator.cpp  decorator.java
LLD/elevator/: CMakeLists.txt  Makefile  NOTES.md  README.md
LLD/elevator/include/: Elevator.h  ElevatorController.h  ExternalRequest.h  IScheduler.h  InternalRequest.h  SCANScheduler.h  Types.h
LLD/elevator/src/: Elevator.cpp  ElevatorController.cpp  SCANScheduler.cpp  main.cpp
LLD/observer/: observer  observer.cpp  observer_app
LLD/parking_lot/: CMakeLists.txt  main.cpp  parking_demo
LLD/singleton/: singleton.cpp  singletonLock.cpp
LLD/stategy/: blockchain.strategy  blockchain.strategy.cpp  blockchain.strategy.ts  duck.revsion.cpp  duck_app  main  main.cpp
dsa/dp/: 19. zero-one-knapsack.cpp  20. minimum-coins-infinite-coin-supply.cpp  21. target-sum.cpp  23 unbounded-knapsack.cpp  24. rod-cutting-problem.cpp  25. longest-common-subsequence.cpp  26. print-longest-common-subsequence.cpp  27. longest-common-substring.cpp  28. longest-palindromic-subsequence.cpp  29. minimum-insertions-to-make-string-palindrome.cpp  30. insertion-or-deletions-to-convert-string-A-to-string-B.cpp  32. distinct-subsequences.cpp  (+6 more)
(+53 files in other folders)
